# world-sim

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs
src/components/: collision.rs  energy.rs  health.rs  mod.rs  movement.rs  position.rs  redai.rs
src/organisms/: mod.rs  organismtype.rs  organismtypemarker.rs  spawn.rs
src/physics/: collision.rs  energy.rs  health.rs  mod.rs  movement.rs  visuals.rs
src/utils/: camera.rs  mod.rs  monitoring.rs
